--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 
 <div class="sidebar">
-  <h2>🚀 CP Wiki</h2>
+  <h2>⚡ Minh CP Wiki</h2>
   <input type="text" id="search" placeholder="Search algorithm...">
 </div>
 
@@ -22,34 +22,16 @@
 <li><a href="math/sieve.html">Sieve</a></li>
 <li><a href="math/ncr.html">nCr</a></li>
 
-<li><a href="sorting/merge.html">Merge Sort</a></li>
-<li><a href="sorting/quick.html">Quick Sort</a></li>
-<li><a href="sorting/binary-search.html">Binary Search</a></li>
-
+<li><a href="ds/vector.html">Vector</a></li>
 <li><a href="ds/stack.html">Stack</a></li>
 <li><a href="ds/queue.html">Queue</a></li>
 <li><a href="ds/dsu.html">Disjoint Set Union</a></li>
 <li><a href="ds/segment-tree.html">Segment Tree</a></li>
 <li><a href="ds/fenwick.html">Fenwick Tree</a></li>
 
-<li><a href="dp/knapsack.html">Knapsack</a></li>
-<li><a href="dp/lis.html">LIS</a></li>
-<li><a href="dp/lcs.html">LCS</a></li>
-<li><a href="dp/bitmask.html">Bitmask DP</a></li>
-
 <li><a href="graph/bfs.html">BFS</a></li>
 <li><a href="graph/dfs.html">DFS</a></li>
 <li><a href="graph/dijkstra.html">Dijkstra</a></li>
-<li><a href="graph/topo.html">Topological Sort</a></li>
-<li><a href="graph/scc.html">SCC</a></li>
-<li><a href="graph/mst.html">Minimum Spanning Tree</a></li>
-<li><a href="graph/maxflow.html">Max Flow</a></li>
-
-<li><a href="string/kmp.html">KMP</a></li>
-<li><a href="string/z.html">Z Algorithm</a></li>
-<li><a href="string/hash.html">Rolling Hash</a></li>
-<li><a href="string/manacher.html">Manacher</a></li>
-<li><a href="string/aho.html">Aho-Corasick</a></li>
 
 </ul>
 
